# HOOP

./: .gitignore  .needle-predispatch-sha  AGENTS.md  ATOMIC_WRITE_AUDIT_SUMMARY.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.beads/: config.yaml  (+1 more)
hoop-cli/: Cargo.toml
hoop-cli/src/: lib.rs  main.rs  new.rs  projects.rs  restore.rs
hoop-daemon/: Cargo.toml  clippy.toml
hoop-daemon/examples/: load-test-runner.rs
hoop-daemon/src/: adb_dictate.rs  agent_adapter.rs  agent_context.rs  agent_session.rs  api_agent.rs  api_attachments.rs  api_audit.rs  api_backup.rs  api_beads.rs  api_blame.rs  api_dictated_notes.rs  api_diff.rs  api_draft_queue.rs  api_metrics.rs  api_morning_brief.rs  api_orphans.rs  api_patterns.rs  api_preview.rs  api_screen_capture.rs  api_stitch_decompose.rs  api_stitch_links.rs  api_stitch_read.rs  api_timeline.rs  api_transcription.rs  api_uploads.rs  atomic_write.rs  attachment_sync.rs  attachments.rs  audio_redaction.rs  audit.rs  backup.rs  backup_pipeline.rs  bead_commit_index.rs  beads.rs  br_verbs.rs  capacity.rs  collision_detector.rs  config_resolver.rs  config_watcher.rs  cost.rs  (+46 more)
hoop-daemon/tests/: compile_fail_create_only.rs  config_reload_audit.rs  config_reload_cycle.rs  create_only_stub.rs  draft_queue_invariants.rs  fix_patterns_integration.rs  golden_transcripts_regression.rs  load_test.rs  needle_events_roundtrip.rs  orphans_integration.rs  panic_isolation.rs  path_traversal_hardening.rs  privacy_surface_audit.rs  projection_file_audit.rs  protocol_contract.rs  quarantine_integration.rs  session_redaction.rs  zero_write_invariant.rs
hoop-daemon/tests/ui/: invoke_br_claim_forbidden.rs  invoke_br_claim_forbidden.stderr  invoke_br_close_raw_forbidden.rs  invoke_br_close_raw_forbidden.stderr  invoke_br_depend_forbidden.rs  invoke_br_depend_forbidden.stderr  invoke_br_release_forbidden.rs  invoke_br_release_forbidden.stderr  invoke_br_update_forbidden.rs  invoke_br_update_forbidden.stderr  invoke_br_write_forbidden.rs  invoke_br_write_forbidden.stderr
hoop-mcp/: Cargo.toml
hoop-mcp/src/: audit.rs  br_verbs.rs  id_validators.rs  lib.rs  log_rotation.rs  main.rs  protocol.rs  redaction.rs  socket.rs  tools.rs
hoop-mcp/tests/: compile_fail_create_only.rs  create_only_stub.rs  forbidden_worker_steering.rs  protocol_contract.rs  socket_permissions.rs
hoop-mcp/tests/ui/: invoke_br_claim_forbidden.rs  (+11 more)
hoop-schema/: Cargo.toml  br-compat.toml  build.rs
hoop-schema/schemas/: agent_config.json  audit_row.json  backup_config.json  bead.json  bead_data.json  capacity_account.json  capacity_limits.json  capacity_usage.json  codex_account_daily_spend_row.json  codex_account_monthly_rollup_row.json  config_error.json  conversation_data.json  cost_bucket.json  debug_state.json  dictated_note.json  hoop_config.json  message_usage.json  parsed_session.json  pattern.json  pattern_member.json  pattern_query.json  pricing_config.json  project_config_status.json  project_entry.json  projects_registry.json  reflection_ledger.json  session_kind.json  session_message.json  stitch.json  stitch_bead.json  stitch_link.json  stitch_message.json  stitch_preview.json  streaming_content.json  ui_config.json  ui_state.json  voice_config.json  worker_data.json  worker_display_state.json  worker_liveness.json  (+3 more)
hoop-schema/src/: id_validators.rs  lib.rs  path_security.rs
testrepo/: .gitignore  Cargo.toml  FIXTURE.md  README.md
testrepo/.beads/: config.yaml  events.jsonl  heartbeats.jsonl  issues.jsonl  metadata.json
testrepo/benches/: bench_1.rs  bench_10.rs  bench_11.rs  bench_12.rs  bench_13.rs  bench_14.rs  bench_15.rs  bench_16.rs  bench_17.rs  bench_18.rs  bench_19.rs  bench_2.rs  bench_20.rs  bench_3.rs  bench_4.rs  bench_5.rs  bench_6.rs  bench_7.rs  bench_8.rs  bench_9.rs
testrepo/docs/: doc_1.md  doc_10.md  doc_11.md  doc_12.md  doc_13.md  doc_14.md  doc_15.md  doc_16.md  doc_17.md  doc_18.md  doc_19.md  doc_2.md  doc_20.md  doc_21.md  doc_22.md  doc_23.md  doc_24.md  doc_25.md  doc_26.md  doc_27.md  doc_28.md  doc_29.md  doc_3.md  doc_30.md  doc_31.md  doc_32.md  doc_33.md  doc_34.md  doc_35.md  doc_36.md  doc_37.md  doc_38.md  doc_39.md  doc_4.md  doc_40.md  doc_41.md  doc_42.md  doc_43.md  doc_44.md  doc_45.md  (+25 more)
testrepo/examples/: config-dev.toml  config-prod.toml
testrepo/fixtures/: info.json  list.json  ready.json  show.json  stats.json  where.json
testrepo/golden-transcripts/: README.md
testrepo/proto/: service_1.proto  service_10.proto  service_11.proto  service_12.proto  service_13.proto  service_14.proto  service_15.proto  service_16.proto  service_17.proto  service_18.proto  service_19.proto  service_2.proto  service_20.proto  service_3.proto  service_4.proto  service_5.proto  service_6.proto  service_7.proto  service_8.proto  service_9.proto
testrepo/schemas/: schema_1.sql  schema_10.sql  schema_11.sql  schema_12.sql  schema_13.sql  schema_14.sql  schema_15.sql  schema_16.sql  schema_17.sql  schema_18.sql  schema_19.sql  schema_2.sql  schema_20.sql  schema_21.sql  schema_22.sql  schema_23.sql  schema_24.sql  schema_25.sql  schema_26.sql  schema_27.sql  schema_28.sql  schema_29.sql  schema_3.sql  schema_30.sql  schema_4.sql  schema_5.sql  schema_6.sql  schema_7.sql  schema_8.sql  schema_9.sql
testrepo/scripts/: example_01.sh  example_02.sh  example_03.sh  example_04.sh  example_05.sh  regenerate-attachments.py  regenerate-cli-sessions.py  regenerate-fixtures.sh
testrepo/src/: lib.rs
testrepo/tests/: example_1.rs  example_10.rs  example_11.rs  example_12.rs  example_13.rs  example_14.rs  example_15.rs  example_16.rs  example_17.rs  example_18.rs  example_19.rs  example_2.rs  example_20.rs  example_21.rs  example_22.rs  example_23.rs  example_24.rs  example_25.rs  example_26.rs  example_27.rs  example_28.rs  example_29.rs  example_3.rs  example_30.rs  example_4.rs  example_5.rs  example_6.rs  example_7.rs  example_8.rs  example_9.rs  integration_1.rs  integration_10.rs  integration_11.rs  integration_12.rs  integration_13.rs  integration_14.rs  integration_15.rs  integration_16.rs  integration_17.rs  integration_18.rs  (+40 more)
(+394 files in other folders)
