[workspace]
resolver = "2"
members = ["hoop-cli", "hoop-daemon", "hoop-schema", "hoop-ui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["jedarden"]
repository = "https://github.com/jedarden/HOOP"

[workspace.dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8.0", features = ["axum"] }
mime_guess = "2.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
