[package]
name = "hoop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hoop"
path = "src/main.rs"

[features]
default = []
zero-write-v01 = ["hoop-daemon/zero-write-v01"]
create-only-write = ["hoop-daemon/create-only-write"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hoop-daemon = { path = "../hoop-daemon" }
hoop-schema = { path = "../hoop-schema" }
tokio = { workspace = true }
anyhow = "1.0"
dirs = "5.0"
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = { workspace = true }
