[package]
name = "hoop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hoop"
path = "src/main.rs"

[features]
default = []
zero-write-v01 = ["hoop-daemon/zero-write-v01"]
create-only-write = ["hoop-daemon/create-only-write"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hoop-daemon = { path = "../hoop-daemon" }
hoop-schema = { path = "../hoop-schema" }
tokio = { workspace = true }
anyhow = "1.0"
dirs = "5.0"
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
chrono = { workspace = true }
rusqlite = { version = "0.30", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
bytes = "1"
zstd = "0.13"
tempfile = "3"

[dev-dependencies]
