[package]
name = "hoop-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hoop-schema = { path = "../hoop-schema" }
hoop-ui = { path = "../hoop-ui" }
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.0"
dirs = "5.0"
