[package]
name = "hoop-daemon"
version.workspace = true
edition.workspace = true

[features]
default = ["zero-write-v01"]
zero-write-v01 = []

[dependencies]
anyhow = "1.0"
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hoop-schema = { path = "../hoop-schema" }
hoop-ui = { path = "../hoop-ui" }
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.0"
dirs = "5.0"
notify = "6.1"
nix = { version = "0.27", features = ["signal"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
rayon = "1"

[dev-dependencies]
tempfile = "3"
