[package]
name = "hoop-schema"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
regress = "0.10"
regex = "1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
typify = "0.2"
schemars = "0.8"
serde_json = "1"
rustfmt-wrapper = "0.2"
